# talk2me-ui

./: .env.dev  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Dockerfile.backup  PERFORMANCE_OPTIMIZATIONS.md  README.md  ai_script.txt  babel.cfg  docker-compose.yml  eslint.config.js  nginx.conf  openapi.yaml  package-lock.json  package.json  postcss.config.js  prometheus.yml  pyproject.toml  requirements.txt  talk2me-core_API_DOCUMENTATION.md
config/: default.yaml  example.yaml  user.yaml
data/: talk2me.db
data/plugins/example_audio_processor/: plugin.json  plugin.py
data/projects/: test_project.json
monitoring/grafana/dashboards/: talk2me-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/: backup.sh  init-ssl.sh  migrate_data.py  migrate_to_db.py  monitor.sh  restore.sh  run_dev.sh  run_prod.sh  setup.sh
src/talk2me_ui/: api_client.py  auth.py  auth_middleware.py  cache.py  config.py  conversation_manager.py  csrf.py  database.py  db_managers.py  exceptions.py  file_handler.py  i18n.py  main.py  markup_parser.py  memory_monitor.py  rbac.py  security_headers.py  security_middleware.py  validation.py
src/talk2me_ui/plugins/: README.md  __init__.py  discovery.py  interfaces.py  lifecycle.py  marketplace.py  plugin_manager.py
src/talk2me_ui/static/: manifest.json  service-worker.js
src/talk2me_ui/static/css/: styles.css
src/talk2me_ui/static/js/: app.js
src/talk2me_ui/static/locales/de/: common.json
src/talk2me_ui/static/locales/en/: common.json
src/talk2me_ui/static/locales/es/: common.json
src/talk2me_ui/static/locales/fr/: common.json
src/talk2me_ui/static/locales/zh/: common.json
src/talk2me_ui/templates/: audiobook.html  base.html  conversation.html  dashboard.html  docs.html  error.html  login.html  plugins.html  register.html  settings.html  sounds.html  stt.html  tts.html  voices.html
src/talk2me_ui/templates/admin/: roles.html
src/talk2me_ui/translations/: de.json  en.json  es.json  fr.json  messages.pot  zh.json
src/talk2me_ui/translations/de/LC_MESSAGES/: messages.po
src/talk2me_ui/translations/es/LC_MESSAGES/: messages.po
src/talk2me_ui/translations/fr/LC_MESSAGES/: messages.po
src/talk2me_ui/translations/zh/LC_MESSAGES/: messages.po
tests/: conftest.py  test_api_client.py  test_auth.py  test_cache.py  test_config.py  test_conversation_manager.py  test_exceptions.py  test_file_handler.py  test_main.py  test_markup_parser.py  test_memory_monitor.py  test_plugins.py  test_rbac.py  test_validation.py
