[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-quality"
version = "0.1.0"

[tool.ruff]
target-version = "py310"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "S", "A", "T20"]
ignore = ["E501", "S101"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=. --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "setup.py", ".git/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]

[tool.bandit]
exclude_dirs = ["tests", "venv"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
